# Blocked_Number-Series

./: README.md  __init__.py  blocked_numbers.json  cli.py  loader.py  models.py  pyproject.toml  sample_numbers.json  test_validator.py  validator.py
data/: blocked_numbers.json
scripts/: validate_number.py
